# handlers/middleware.go
@@ -1,6 +1,9 @@
 package handlers
 
 import (
+	db "code/db/generated"
+	"database/sql"
+	"fmt"
 	"net/http"
 	"regexp"
 	"strconv"
@@ -65,4 +68,55 @@ func parseRange(query string) (RangeParam, error) {
 	}
 
 	return result, nil
+}
+
+func RecordVisit(queries *db.Queries) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		c.Next()
+
+		link, exists := c.Get("link")
+
+		if !exists {
+			return
+		}
+
+		linkId := link.(db.Link).ID
+		ip := getClientIpByHeader(c)
+		userAgent := c.Request.UserAgent()
+		referer := c.Request.Header.Get("Referer")
+		status := c.Writer.Status()
+
+		visit, err := queries.CreateVisit(c, db.CreateVisitParams{
+			LinkID:    linkId,
+			Ip:        sql.NullString{String: ip, Valid: ip != ""},
+			UserAgent: sql.NullString{String: userAgent, Valid: userAgent != ""},
+			Referer:   sql.NullString{String: referer, Valid: referer != ""},
+			Status:    int16(status),
+		})
+
+		if err != nil {
+			handleDbError(err, c)
+		}
+
+		fmt.Println("~~~~~~~~~~~~~~~~~~~~~~")
+		fmt.Printf("%v\n", visit)
+	}
+}
+
+func getClientIpByHeader(c *gin.Context) string {
+	headers := [3]string{
+		"X-Forwarded-For",
+		"x-forwarded-for",
+		"X-FORWARDED-FOR",
+	}
+	var result string
+
+	for _, header := range headers {
+		result = c.Request.Header.Get(header)
+		if result != "" {
+			return result
+		}
+	}
+
+	return c.ClientIP()
 }
